--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   />
   <style>
     body {
-      font-family: "Roboto", sans-serif;
+      font-family: 'Roboto', sans-serif;
       background-color: #f7fafc;
       color: #333;
       line-height: 1.6;
-      background-image: url("images/pexels-apasaric-325185.jpg");
+      background-image: url('images/pexels-apasaric-325185.jpg');
       background-size: cover;
       background-position: center;
       display: flex;
@@ -151,7 +151,7 @@
     <a href="#skills">Skills</a>
     <a href="#intern">Internship</a>
     <a href="#education">Education</a>
-    <a href="#awards">Awards</a>
+    <a href="#awards">Awards</a> <!-- Added -->
     <a href="#publications">Publications</a>
     <a href="#projects">Projects</a>
   </div>
@@ -160,12 +160,7 @@
       <div class="container">
         <h1>Munmi Thakuria</h1>
         <p>DevOps Engineer | Deep Learning Researcher | AI in Healthcare</p>
-        <a
-          href="files/Munmi_Thakuria_Resume.pdf"
-          class="btn-download"
-          download
-          >Download Resume</a
-        >
+        <a href="files/Munmi_Thakuria_Resume.pdf" class="btn-download" download>Download Resume</a> <!-- Added -->
       </div>
     </header>
 
@@ -174,11 +169,9 @@
       <div class="card">
         <h3 class="font-bold text-xl">IT Intern – Johnson Electric, MI</h3>
         <p>
-          Supporting development of Agentic RAG-based applications utilizing OpenAI
-          LLMs and multi-agent systems. Contributed to scalable documentation
-          systems using Docusaurus and participated in backend automation.
-          Assisted in Excel-to-SharePoint data migration workflows using Power Apps
-          and Power Automate.
+          Supporting development of Agentic RAG-based applications utilizing OpenAI LLMs and multi-agent systems.
+          Contributed to scalable documentation systems using Docusaurus and participated in backend automation.
+          Assisted in Excel-to-SharePoint data migration workflows using Power Apps and Power Automate.
         </p>
       </div>
     </section>
@@ -187,9 +180,7 @@
       <h2 class="section-title">Education</h2>
       <div class="card">
         <h3 class="font-bold text-xl">M.S. in Applied Computer Science</h3>
-        <p>
-          Grand Valley State University, Allendale, MI, USA — <strong>GPA: 4.0</strong>
-        </p>
+        <p>Grand Valley State University, Allendale, MI, USA — <strong>GPA: 4.0</strong></p> <!-- GPA bolded -->
         <p>Aug 2023 – Apr 2025</p>
       </div>
       <div class="card mt-4">
@@ -199,19 +190,13 @@
       </div>
     </section>
 
-    <section id="awards" class="container py-8">
+    <section id="awards" class="container py-8"> <!-- Added Awards Section -->
       <h2 class="section-title">Awards</h2>
       <div class="card">
         <ul class="list-disc pl-5 space-y-2">
-          <li>
-            <strong>Dean's List</strong> — Grand Valley State University, Apr 2025: Awarded for maintaining a GPA of 3.8 or higher
-          </li>
-          <li>
-            <strong>I am Grand Valley Award</strong> — Grand Valley State University, Apr 2025: Recognized for leadership contributions to the university community
-          </li>
-          <li>
-            <strong>IEEE Student Travel Award</strong> — NSF, Dec 2024
-          </li>
+          <li><strong>Dean's List</strong> — Grand Valley State University, Apr 2025: Awarded for maintaining a GPA of 3.8 or higher</li>
+          <li><strong>I am Grand Valley Award</strong> — Grand Valley State University, Apr 2025: Recognized for leadership contributions to the university community</li>
+          <li><strong>IEEE Student Travel Award</strong> — NSF, Dec 2024</li>
         </ul>
       </div>
     </section>
@@ -234,15 +219,21 @@
         </div>
         <div class="card">
           <h3 class="font-bold text-xl">Ottawa County Incident Visualization</h3>
-          <p>Visualized sheriff incident data using Tableau for data storytelling and analysis.</p>
+          <p>
+            Visualized sheriff incident data using Tableau for data storytelling and analysis.
+          </p>
         </div>
         <div class="card">
           <h3 class="font-bold text-xl">Hyper-spectral Image Classification</h3>
-          <p>MATLAB-based classification of satellite images using supervised machine learning.</p>
+          <p>
+            MATLAB-based classification of satellite images using supervised machine learning.
+          </p>
         </div>
         <div class="card">
           <h3 class="font-bold text-xl">Banking Management System</h3>
-          <p>JS/MySQL web app to simplify banking operations and reduce paperwork.</p>
+          <p>
+            JS/MySQL web app to simplify banking operations and reduce paperwork.
+          </p>
         </div>
       </div>
     </section>
