--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div class="container">
         <h1>Munmi Thakuria</h1>
         <p>DevOps Engineer | Deep Learning Researcher | AI in Healthcare</p>
-        <a href="files/Munmi_Thakuria_Resume.pdf" class="btn-download" download>Download Resume</a> <!-- Added -->
+        <a href="Resume.pdf" class="btn-download" download>Download Resume</a> <!-- Added -->
       </div>
     </header>
 
