--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <header>
       <div class="container">
         <h1>Munmi Thakuria</h1>
-        <p>DevOps Engineer | Deep Learning Researcher | AI in Healthcare</p>
+        <p>IT Intern @Johnson Electric| Building Agentic RAG Apps with LLMs | Deep Learning Researcher in Healthcare | IEEE-Published| 5+ Years DevOps Engineering</p>
         <a href="Resume.pdf" class="btn-download" download>Download Resume</a> <!-- Added -->
       </div>
     </header>
