--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
       <div class="card">
         <h3 class="font-bold text-xl">IT Intern – Johnson Electric, MI</h3>
         <p>
-          Supporting development of Agentic RAG-based applications utilizing OpenAI LLMs and multi-agent systems.
+          Developing Agentic RAG-based applications utilizing Azure AI LLMs and multi-agent systems.
+	  Developed RESTful APIs using FastAPI to connect an enterprise data warehouse to a chatbot interface powered by Azure AI Search and LLMs; enabled dynamic SQL query execution based on user prompts.
           Contributed to scalable documentation systems using Docusaurus and participated in backend automation.
           Assisted in Excel-to-SharePoint data migration workflows using Power Apps and Power Automate.
         </p>
@@ -274,3 +275,4 @@
 </body>
 
 </html>
+
