--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="card">
         <ul class="list-disc pl-5 space-y-2">
           <li><strong>Dean's List</strong> — Grand Valley State University, Apr 2025: Awarded for maintaining a GPA of 3.8 or higher</li>
-          <li><strong>I am Grand Valley Award</strong> — Grand Valley State University, Apr 2025: Recognized for leadership contributions to the university community</li>
+          <li><strong>I am Grand Valley Award</strong> — Grand Valley State University, Apr 2025: Recognized for leadership contributions to the University Community</li>
           <li><strong>IEEE Student Travel Award</strong> — NSF, Dec 2024</li>
         </ul>
       </div>
@@ -275,4 +275,5 @@
 </body>
 
 </html>
+
 
