--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
     <header>
       <div class="container">
         <h1>Munmi Thakuria</h1>
-        <p>IT Intern @Johnson Electric| Building Agentic RAG Apps with LLMs | Deep Learning Researcher in Healthcare | IEEE-Published| 5+ Years DevOps Engineering</p>
+        <p>Building Agentic RAG Apps with LLMs | Deep Learning Researcher in Healthcare | IEEE-Published</p>
         <a href="Resume.pdf" class="btn-download" download>Download Resume</a> <!-- Added -->
       </div>
     </header>
 
-    <section id="intern" class="container py-8">
-      <h2 class="section-title">Internship Experience</h2>
+    <section id="Work" class="container py-8">
+      <h2 class="section-title">Recent Experience</h2>
       <div class="card">
-        <h3 class="font-bold text-xl">IT Intern – Johnson Electric, MI</h3>
+        <h3 class="font-bold text-xl">AI Engineer – Johnson Electric, MI</h3>
         <p>
           Developing Agentic RAG-based applications utilizing Azure AI LLMs and multi-agent systems.
 	  Developed RESTful APIs using FastAPI to connect an enterprise data warehouse to a chatbot interface powered by Azure AI Search and LLMs; enabled dynamic SQL query execution based on user prompts.
@@ -275,5 +275,6 @@
 </body>
 
 </html>
+
 
 
