--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div class="sidebar">
     <a href="#about">About Me</a>
     <a href="#skills">Skills</a>
-    <a href="#intern">Internship</a>
+    <a href="#work">Work Experience</a>
     <a href="#education">Education</a>
     <a href="#awards">Awards</a> <!-- Added -->
     <a href="#publications">Publications</a>
@@ -275,6 +275,7 @@
 </body>
 
 </html>
+
 
 
 
